index: Stop bottons from wrapping into pattern area
On narrow screens the buttons could overlap with the pattern area. That's bad, don't do that.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,6 +124,10 @@ a:active { color: #810E15 }
     padding-top: 1em;
 }
 
+.clearfix-nopad {
+    clear: both;
+}
+
 h3.example {
     padding-top: 1em;
 }
